--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                             <h3 class="mb-0">Technical Product Manager</h3>
                             <div class="subheading mb-3">Hydrogen Platform</div>
                             <ul class="list-job-descriptions">
-                                <li class="list-item">As a key player in building out a no-code SaaS platform offering white-labeled debit card programs powered by EML & Marqeta, I made the transition from Business Analyst to Technical Product Manager over 3+ years</li>
+                                <li class="list-item">As a key player in building out a no-code SaaS platform offering white-labeled debit card programs powered by EML & Marqeta, I transitioned from Business Analyst to Technical Product Manager over 3+ years</li>
                                 <li class="list-item">Successfully developed and launched a transaction authorization system with customizable card spending controls</li>
-                                <li class="list-item">Lead product manager on a card rewards offering which enables both custom and third-party rewards</li>
+                                <li class="list-item">Lead product manager on a card rewards program which enables both custom and third-party rewards</li>
                                 <li class="list-item">Implemented a LendingTree integration to provide access to insurance products within our white label card app</li>
                                 <li class="list-item">Created a suite of personal (PFM) and business (BFM) financial management APIs and components like Cash Flow, Budgeting, and Invoicing using data aggregators such as MX, Plaid, Yodlee, Quickbooks, Xero, and more</li>
                                 <li class="list-item">Designed the transaction categorization data model utilized for both internal card and aggregated account data</li>
