--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <li class="list-item">As a key player in building out a no-code SaaS platform offering white-labeled debit card programs powered by EML & Marqeta, I transitioned from Business Analyst to Technical Product Manager over 3+ years</li>
                                 <li class="list-item">Successfully developed and launched a transaction authorization system with customizable card spending controls</li>
                                 <li class="list-item">Lead product manager on a card rewards program which enables both custom and third-party rewards</li>
-                                <li class="list-item">Implemented a LendingTree integration to provide access to insurance products within our white label card app</li>
+                                <li class="list-item">Implemented a LendingTree integration to provide access to insurance products within the white label card app</li>
                                 <li class="list-item">Created a suite of personal (PFM) and business (BFM) financial management APIs and components like Cash Flow, Budgeting, and Invoicing using data aggregators such as MX, Plaid, Yodlee, Quickbooks, Xero, and more</li>
                                 <li class="list-item">Designed the transaction categorization data model utilized for both internal card and aggregated account data</li>
                                 <li class="list-item">Work closely with Financial Engineering to prepare requirements for and thoroughly test all financial analytics APIs</li>
